# bintang

./: .env.example  .gitignore  COMBINED-DEPLOY.md  Dockerfile  RAILWAY.md  README.md  docker-compose.yml  railway.toml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
backend/app/: main.py  seed.py  seed_master.py
backend/app/alembic/: env.py
backend/app/core/: config.py  (+3 more)
backend/docs/: migrations.md
backend/tests/: conftest.py  test_ai_feature_settings.py  test_ai_features_batch1.py  test_ai_features_batch2.py  test_ai_features_batch3.py  test_ai_foundation.py  test_ai_prompts.py  test_allocation_block_direct_expense.py  test_allocation_guard.py  test_allocation_verified_only.py  test_bot_doc_photo_parse.py  test_bot_invoice_assistant.py  test_bot_po_assistant.py  test_budget_consistency.py  test_budget_excludes_marketing.py  test_bulk_approval.py  test_cash_request_reverse_link.py  test_cash_requests.py  test_category_bulk_cleanup.py  test_dashboard_closed_filter.py  test_draft_edit_and_godmode.py  test_field_encryption.py  test_financial_check_constraints.py  test_immutable_project_id.py  test_invoice_number_unique.py  test_login_username.py  test_marketing_no_double_count.py  test_n_plus_one_fixes.py  test_non_project_lockdown.py  test_notif_audience.py  test_notifications_closed_filter.py  test_ocr_and_link_rate_limit.py  test_ocr_jobs.py  test_ocr_pipeline.py  test_po_numbering.py  test_project_guard.py  test_reports_smoke.py  test_secret_key_guard.py  test_security_headers_and_cors_guard.py  test_soft_delete_no_greenlet.py  (+5 more)
(+390 files in other folders)
