[project]
name = "bintang-backend"
version = "0.1.0"
description = "Bintang - Biaya, Investasi dan Tata Anggaran Gerak (Backend API)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "alembic>=1.13.0",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.5.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.2.0",
  "python-multipart>=0.0.12",
  "aiofiles>=24.1.0",
  "Pillow>=11.0.0",
  "openpyxl>=3.1.5",
  "weasyprint>=63.0",
  "jinja2>=3.1.4",
  "httpx>=0.27.0",
  "email-validator>=2.2.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
# Auto-detect async test fns (decorator @pytest.mark.asyncio bisa
# di-omit utk fn coroutine). Mode "auto" simplify writing tests.
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
